Require military docs when gender is masculine

--- a/selecao-hvet.html
+++ b/selecao-hvet.html
@@ -303,7 +303,7 @@
                 <div class="col-md-4"><div id="status_doc_eleitoral" class="uploader-status ms-auto"></div></div>
 
                 <div class="col-md-8 d-none" id="docMilitarWrap">
-                  <label class="form-label">Quitação do serviço militar (masculino)</label>
+                  <label class="form-label">Quitação do serviço militar</label>
                   <div class="dropzone"><input class="form-control" type="file" id="doc_militar" accept=".pdf,image/*"></div>
                   <div class="help tiny">CAM / CDI / CI / CRM.</div>
                 </div>
@@ -452,7 +452,7 @@
           <div class="card-body">
             <div class="row g-3">
               <div class="col-md-4 d-none" id="militarPergunta">
-                <label class="form-label">Obrigações militares em dia? (masculino)</label><br>
+                <label class="form-label">Obrigações militares em dia?</label><br>
                 <div class="d-flex gap-3">
                   <div class="form-check"><input class="form-check-input" type="radio" name="militar" id="militar_sim" value="SIM"><label class="form-check-label" for="militar_sim">Sim</label></div>
                   <div class="form-check"><input class="form-check-input" type="radio" name="militar" id="militar_nao" value="NAO"><label class="form-check-label" for="militar_nao">Não</label></div>
