--- a/selecao-hvet.html
+++ b/selecao-hvet.html
@@ -303,7 +303,7 @@
                 <div class="col-md-4"><div id="status_doc_eleitoral" class="uploader-status ms-auto"></div></div>
 
                 <div class="col-md-8 d-none" id="docMilitarWrap">
-                  <label class="form-label">Quitação do serviço militar</label>
+                  <label class="form-label" id="docMilitarLabel">Quitação do serviço militar</label>
                   <div class="dropzone"><input class="form-control" type="file" id="doc_militar" accept=".pdf,image/*"></div>
                   <div class="help tiny">CAM / CDI / CI / CRM.</div>
                 </div>
@@ -452,7 +452,7 @@
           <div class="card-body">
             <div class="row g-3">
               <div class="col-md-4 d-none" id="militarPergunta">
-                <label class="form-label">Obrigações militares em dia?</label><br>
+                <label class="form-label" id="militarPerguntaLabel">Obrigações militares em dia?</label><br>
                 <div class="d-flex gap-3">
                   <div class="form-check"><input class="form-check-input" type="radio" name="militar" id="militar_sim" value="SIM"><label class="form-check-label" for="militar_sim">Sim</label></div>
                   <div class="form-check"><input class="form-check-input" type="radio" name="militar" id="militar_nao" value="NAO"><label class="form-check-label" for="militar_nao">Não</label></div>
@@ -1382,6 +1382,18 @@
       bindUppercase('#naturalidade_uf');
       bindUppercase('#uf');
 
+      function updateDocMilitarStatus(){
+        const input = $('#doc_militar');
+        const status = document.getElementById('status_doc_militar');
+        if(!input || !status) return;
+        if(!isGeneroMasculino()){
+          resetUploaderStatus('status_doc_militar');
+          return;
+        }
+        const res = checkFiles(input, { required: true });
+        if(res.ok) ok(status, res.msg); else bad(status, res.msg);
+      }
+
       function toggleGeneroDependents(){
         const isMasc = isGeneroMasculino();
         document.querySelectorAll('input[name="militar"]').forEach(radio=>{
@@ -1392,9 +1404,17 @@
         if(militarWrap){
           militarWrap.classList.toggle('d-none', !isMasc);
         }
+        const militarLabel = $('#militarPerguntaLabel');
+        if(militarLabel){
+          militarLabel.classList.toggle('required', isMasc);
+        }
         const docWrap = $('#docMilitarWrap');
         if(docWrap){
           docWrap.classList.toggle('d-none', !isMasc);
+        }
+        const docLabel = $('#docMilitarLabel');
+        if(docLabel){
+          docLabel.classList.toggle('required', isMasc);
         }
         const statusWrap = $('#status_doc_militar_wrap');
         if(statusWrap){
@@ -1407,11 +1427,7 @@
             docInput.value='';
             resetUploaderStatus('status_doc_militar');
           }else{
-            const status = document.getElementById('status_doc_militar');
-            if(status && docInput.files?.length){
-              const res = checkFiles(docInput,{required:false});
-              if(res.ok) ok(status,res.msg); else bad(status,res.msg);
-            }
+            updateDocMilitarStatus();
           }
         }
         refreshSubmitState();
